Logged events for various application actions using logEvent method.