@@ -14,6 +14,7 @@ public class ReplacementManager implements Writable {
     // EFFECTS: constructs a replacement manager with a list of replace pairs and a
     // possible replace pair.
     public ReplacementManager() {
+        EventLog.getInstance().logEvent(new Event("Replacement manager created."));
         this.repPairs = new ArrayList<>();
         this.possibleRepPair = null;
     }
@@ -22,6 +23,7 @@ public class ReplacementManager implements Writable {
     // MODIFIES: this
     public void addRepPair(ReplacePair rp) {
         repPairs.add(rp);
+        EventLog.getInstance().logEvent(new Event("Replace pair added to history."));
     }
 
     public void setPossibleRepPair(ReplacePair rp) {
@@ -39,7 +41,7 @@ public class ReplacementManager implements Writable {
     // EFFECTS: returns last rep pair in list of rep pairs. Returns null if list has no rep pairs.
     public ReplacePair getLastRep() {
         if (repPairs.size() > 0) {
-            return repPairs.getLast();
+            return repPairs.get(repPairs.size() - 1);
         } else {
             return null;
         }
